--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,22 +1,22 @@
 {% assign archiveData = site.data.i18n[language]['archive'] %}
 
-<div id="dropDown">
-<input type="checkbox" id="dropDownSwitch" />
-<label for="dropDownSwitch">{{ archiveData['strings'].selectAMonth }}</label>
-<ul>			
-{% assign oldValue = '' %}
-{% for post in site.posts %}
-	{% for category in post.categories %}
-		{% if category == language %}
-			{% assign month = post.date | date: '%m' %}
-			{% assign year = post.date | date: '%Y' %}
-			{% assign value = post.date | date: '%m / %Y' %}
-			{% if value != oldValue %}
-				{% assign oldValue = value %}
-	<li><a href="{{ archiveData.url }}/{{ year }}/{{ month }}/">{{ value }}</a></li>	
-			{% endif %}
-		{% endif %}
-	{% endfor %}
-{% endfor %}	
-</ul>
+<div id="archiveMenu">
+	<input type="checkbox" id="archiveMenuTrigger" />
+	<label for="archiveMenuTrigger">{{ archiveData['strings'].selectAMonth }}</label>
+	<ul id="archiveMenuEntries">
+		{% assign oldValue = '' %}
+		{% for post in site.posts %}
+			{% for category in post.categories %}
+				{% if category == language %}
+					{% assign month = post.date | date: '%m' %}
+					{% assign year = post.date | date: '%Y' %}
+					{% assign value = post.date | date: '%m / %Y' %}
+					{% if value != oldValue %}
+						{% assign oldValue = value %}
+	<li><a class="archive" href="{{ archiveData.url }}/{{ year }}/{{ month }}/">{{ value }}</a></li>	
+					{% endif %}
+				{% endif %}
+			{% endfor %}
+		{% endfor %}	
+	</ul>
 </div>
