--- a/css/_font.scss
+++ b/css/_font.scss
@@ -9,7 +9,7 @@
 	local fonts
 */
 
-// Genericons
+/* Genericons */
 @font-face {
     font-family: 'Genericons';
     src: url('../media/font/genericons-regular-webfont.eot');
@@ -22,7 +22,7 @@
 }
 
 
-// Inconsolata
+/* Inconsolata regular */
 @font-face {
     font-family: "Inconsolata";
     src: url("../media/font/inconsolata-regular.eot");
@@ -34,6 +34,7 @@
     font-style: normal;
 }
 
+/* Inconsolata bold */
 @font-face {
     font-family: "Inconsolata";
     src: url("../media/font/inconsolata-bold.eot");
@@ -41,30 +42,6 @@
          url("../media/font/inconsolata-bold.woff") format('woff'),
          url("../media/font/inconsolata-bold.ttf") format('truetype'),
          url("../media/font/inconsolata-bold.svg#inconsolatabold") format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-
-
-// Open Sans
-@font-face {
-    font-family: "Open Sans";
-    src: url("../media/font/opensans-regular.eot");
-    src: url("../media/font/opensans-regular.eot?#iefix") format('embedded-opentype'),
-         url("../media/font/opensans-regular.woff") format('woff'),
-         url("../media/font/opensans-regular.ttf") format('truetype'),
-         url("../media/font/opensans-regular.svg#open_sansregular") format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Open Sans";
-    src: url("../media/font/opensans-bold.eot");
-    src: url("../media/font/opensans-bold.eot?#iefix") format('embedded-opentype'),
-         url("../media/font/opensans-bold.woff") format('woff'),
-         url("../media/font/opensans-bold.ttf") format('truetype'),
-         url("../media/font/opensans-bold.svg#open_sansbold") format('svg');
     font-weight: bold;
     font-style: normal;
 }
